<resources>
    <string name="app_name">Companies - Rigoberto Saenz</string>
    <string name="date_picker_title">Hire Date</string>
    <string name="new_company">New Company</string>
    <string name="show_subtitle">Show Subtitle</string>
    <string name="hide_subtitle">Hide Subtitle</string>
    <string name="subtitle_format">%1$s crimes</string>
    <string name="choose_menu">Choose a Menu Option</string>
    <string name="view_all_companies">View All Companies</string>
    <string name="remove_company">Remove Company</string>
    <string name="update_company">Update Company</string>
    <string name="add_company">Add Company</string>
    <string name="phone">Phone</string>
    <string name="add_company_name">Company Name</string>
    <string name="add_company_website">Website</string>
    <string name="add_company_phone">Phone</string>
    <string name="add_company_email">Email</string>
    <string name="add_company_products">Products and Services</string>
    <string name="add_company_type">Classification</string>
    <string name="add_company_type_consultoria">Consultoria</string>
    <string name="add_company_type_desarrollo">Desarrollo a la Medida</string>
    <string name="add_company_type_fabrica">Fabrica de Software</string>
    <string name="short_company_type_all">All Types</string>
    <string name="short_company_type_consultoria">Consultoria</string>
    <string name="short_company_type_desarrollo">Desarrollo</string>
    <string name="short_company_type_fabrica">Fabrica</string>
    <string name="string_male">Male</string>
    <string name="string_female">Female</string>
    <string name="add_date">Hire Date (DD/MM/YYYY)</string>
    <string name="add_dept">Department</string>
    <string name="enter_company_id">Enter Your Company Id</string>
    <string name="settings">Settings</string>
</resources>
