<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="30dp">
    <EditText
        android:id="@+id/edit_text_company_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/add_company_name"
        android:padding="@dimen/view_padding"
        android:textSize="@dimen/add_edit_textsize"/>
    <EditText
        android:id="@+id/edit_text_company_website"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/add_company_website"
        android:padding="@dimen/view_padding"
        android:textSize="@dimen/add_edit_textsize"/>
    <EditText
        android:id="@+id/edit_text_company_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/add_company_phone"
        android:padding="@dimen/view_padding"
        android:textSize="@dimen/add_edit_textsize"/>
    <EditText
        android:id="@+id/edit_text_company_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/add_company_email"
        android:padding="@dimen/view_padding"
        android:textSize="@dimen/add_edit_textsize"/>
    <EditText
        android:id="@+id/edit_text_company_products"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/add_company_products"
        android:padding="@dimen/view_padding"
        android:textSize="@dimen/add_edit_textsize"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:padding="@dimen/view_padding">

        <TextView
            android:id="@+id/text_view_gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_company_type"
            android:textSize="@dimen/add_edit_textsize"
            android:paddingRight="25dp"/>
        <RadioGroup
            android:id="@+id/radio_company_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingRight="25dp">

            <RadioButton
                android:id="@+id/radio_type_consultoria"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_company_type_consultoria"
                android:textSize="@dimen/add_edit_textsize"
                android:checked="true"/>

            <RadioButton
                android:id="@+id/radio_type_desarrollo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_company_type_desarrollo"
                android:textSize="@dimen/add_edit_textsize"/>

            <RadioButton
                android:id="@+id/radio_type_fabrica"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_company_type_fabrica"
                android:textSize="@dimen/add_edit_textsize"/>

        </RadioGroup>

    </LinearLayout>

    <Button
        android:id="@+id/button_add_update_company"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:layout_marginTop="@dimen/button_padding"
        android:text="@string/add_company"
        android:layout_gravity="center"/>
</LinearLayout>