<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".ViewAllCompanies"
    android:gravity="center_horizontal">

    <RadioGroup
        android:id="@+id/radio_filter_type"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:checkedButton="@+id/filter_type_all"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/filter_type_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/short_company_type_all" />

        <RadioButton
            android:id="@+id/filter_type_consultoria"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/short_company_type_consultoria" />

        <RadioButton
            android:id="@+id/filter_type_desarrollo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/short_company_type_desarrollo" />

        <RadioButton
            android:id="@+id/filter_type_fabrica"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/short_company_type_fabrica" />
    </RadioGroup>

    <ListView
        android:id="@android:id/list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>